Update Post “2022-05-20-moreschi-472-c”

--- a/content/posts/2022-05-20-moreschi-472-c.md
+++ b/content/posts/2022-05-20-moreschi-472-c.md
@@ -4,6 +4,8 @@ title: Moreschi 472 C
 status: Published
 date: 2022-05-15
 featuredImage: https://ucarecdn.com/60d53796-1e7f-4f92-9827-dfd25da370cc/
+gallery:
+  - image: https://ucarecdn.com/9208f6f2-949c-41a2-896e-5a8dd2a91dcb/
 rightHandNotes: 40(52)
 rightHandReeds: "2"
 rightHandRegisters: "3"
