Update Post “2022-05-20-moreschi-472-c”

--- a/content/posts/2022-05-20-moreschi-472-c.md
+++ b/content/posts/2022-05-20-moreschi-472-c.md
@@ -9,7 +9,7 @@ gallery:
 rightHandNotes: 40(52)
 rightHandReeds: "2"
 rightHandRegisters: "3"
-cassotto: Όχι
+cassotto: ""
 leftHandBass: "72"
 leftHandReeds: "4"
 leftHandRegisters: "-"
