Update Post “2022-05-20-moreschi-472-c”

--- a/content/posts/2022-05-20-moreschi-472-c.md
+++ b/content/posts/2022-05-20-moreschi-472-c.md
@@ -3,9 +3,9 @@ template: SinglePost
 title: Moreschi 472 C
 status: Published
 date: 2022-05-15
-featuredImage: https://ucarecdn.com/60d53796-1e7f-4f92-9827-dfd25da370cc/
+featuredImage: https://4nu0goopbx.ucarecd.net/bb3338f5-a74e-488e-aa47-2841d30950f9/
 gallery:
-  - image: https://ucarecdn.com/9208f6f2-949c-41a2-896e-5a8dd2a91dcb/
+  - image: https://4nu0goopbx.ucarecd.net/3c77d04c-d90f-455c-8024-e83adeab074f/
 rightHandNotes: 40(52)
 rightHandReeds: "2"
 rightHandRegisters: "3"
