Update Post “2022-05-20-μαξιλαράκια”

--- a/content/posts/2022-05-20-μαξιλαράκια.md
+++ b/content/posts/2022-05-20-μαξιλαράκια.md
@@ -3,9 +3,9 @@ template: SinglePost
 title: Μαξιλαράκια
 status: Published
 date: 2022-05-18
-featuredImage: https://ucarecdn.com/26ef32c4-ca3b-4531-be9c-eb10a2ea79b3/
+featuredImage: https://4nu0goopbx.ucarecd.net/9a96d8a6-17a3-40cc-b6f8-3b6c0a720633/
 gallery:
-  - image: https://ucarecdn.com/0cf8052a-ca17-4a56-92e4-8eb83c9acb6a/
+  - image: https://4nu0goopbx.ucarecd.net/fcabde7f-da76-42a1-8a4c-35e563de7293/
 excerpt: Μαξιλαράκια για το πίσω μέρος του ακορντεόν σε διάφορα μεγέθη και τύπους.
 categories:
   - category: Λουριά - Μαξιλαράκια
