Update Post Category “μικροφωνικά-συστήματα”

--- a/content/postCategories/μικροφωνικά-συστήματα.md
+++ b/content/postCategories/μικροφωνικά-συστήματα.md
@@ -3,7 +3,7 @@ template: BlogIndex
 title: Μικροφωνικά συστήματα
 subtitle: Ενσωματωμένα μικροφωνικά συστήματα για ακορντεόν
 order: "5"
-featuredImage: https://ucarecdn.com/a8ac06d6-71d9-4a73-afb4-4bcac17b7ea3/
+featuredImage: https://4nu0goopbx.ucarecd.net/d40ee218-6169-400d-8962-51c51cd76ec8/-/crop/2449x1285/0,348/-/preview/
 meta:
   title: Μικροφωνικά συστήματα
   description: Ενσωματωμένα μικροφωνικά συστήματα για ακορντεόν
