Update Post “2022-05-20-μικρόφωνο-harmonik”

--- a/content/posts/2022-05-20-μικρόφωνο-harmonik.md
+++ b/content/posts/2022-05-20-μικρόφωνο-harmonik.md
@@ -3,9 +3,9 @@ template: SinglePost
 title: Μικρόφωνο Harmonik
 status: Published
 date: 2022-05-20
-featuredImage: https://ucarecdn.com/7c43826a-a0ea-4109-bdba-1dff72113e00/
+featuredImage: https://4nu0goopbx.ucarecd.net/3daeff8b-96d7-4695-8aee-e77d14291b3c/
 gallery:
-  - image: https://ucarecdn.com/e9dedc6b-3eba-4098-b74f-825d85929db1/
+  - image: https://4nu0goopbx.ucarecd.net/fad5a3c7-12ab-4e5b-ad76-2f4d76e907eb/
 categories:
   - category: Μικροφωνικά συστήματα
 meta:
