Update Post Category “ανταλλακτικά”

--- a/content/postCategories/ανταλλακτικά.md
+++ b/content/postCategories/ανταλλακτικά.md
@@ -3,7 +3,7 @@ template: BlogIndex
 title: Ανταλλακτικά
 subtitle: Διάφορα ανταλλακτικά για ακορντεόν
 order: "6"
-featuredImage: https://ucarecdn.com/3a7cb66e-65d6-4591-8f24-910bb28f49db/
+featuredImage: https://4nu0goopbx.ucarecd.net/6a20ddec-2de3-4625-a437-557ce9c757eb/
 meta:
   title: Ανταλλακτικά
   description: Διάφορα ανταλλακτικά για ακορντεόν
