Update Post “2022-05-20-φυσούνες”

--- a/content/posts/2022-05-20-φυσούνες.md
+++ b/content/posts/2022-05-20-φυσούνες.md
@@ -3,11 +3,11 @@ template: SinglePost
 title: Φυσούνες
 status: Published
 date: 2022-05-20
-featuredImage: https://ucarecdn.com/8dba3dd1-6820-4814-a56b-1ed87da5ef5d/
+featuredImage: https://4nu0goopbx.ucarecd.net/4b6e4d54-df6d-4620-98d1-bdacfea29fef/
 gallery:
-  - image: https://ucarecdn.com/7d31d9ea-d7b2-4ca1-9f8b-8d6e4997a704/
-  - image: https://ucarecdn.com/68ebab1c-3a9e-4aa6-b6c8-ae79503d5f8a/
-  - image: https://ucarecdn.com/9758df23-0bb4-4a09-b006-47ec00f8f1d9/
+  - image: https://4nu0goopbx.ucarecd.net/849722b8-daab-42fe-bf36-9a75de3af187/
+  - image: https://4nu0goopbx.ucarecd.net/b3e3b77c-1bb5-42ba-bc5e-76ce638ee569/
+  - image: https://4nu0goopbx.ucarecd.net/1fe1d1d1-4020-43fe-8163-605c37f97a9a/
 excerpt: Φυσούνες διαφόρων μεγεθών και σχεδίων. Κατόπιν παραγγελίας.
 categories:
   - category: Ανταλλακτικά
