Update Post “2022-05-20-φωνές”

--- a/content/posts/2022-05-20-φωνές.md
+++ b/content/posts/2022-05-20-φωνές.md
@@ -3,9 +3,9 @@ template: SinglePost
 title: Φωνές
 status: Published
 date: 2022-05-18
-featuredImage: https://ucarecdn.com/ae7b3350-6307-4b5a-97b5-5fbcf94da1a0/
+featuredImage: https://4nu0goopbx.ucarecd.net/62ffa907-3673-4e00-827c-cb110a26b052/
 gallery:
-  - image: https://ucarecdn.com/1c305db6-4f40-472d-a12c-ed17cc0ef876/
+  - image: https://4nu0goopbx.ucarecd.net/97a34d34-92d9-4580-8170-df0f09444933/
 excerpt: Φωνές χειροποίητες και εργοστασιακού τύπου κάθε είδους.
 categories:
   - category: Ανταλλακτικά
